--- a/thesis.tex
+++ b/thesis.tex
@@ -11,6 +11,10 @@
 %compresses ranges of citations eg [1, 2, 3, 4, 5] becomes [1-5]
 \usepackage[numbers,sort&compress]{natbib}
 
+\usepackage{draftwatermark}
+\SetWatermarkScale{7}
+\SetWatermarkLightness{0.9}
+
 \renewcommand{\chaptername}{}
 
 % ======= ======= ======= ======= ======= ======= =======
