--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -1,7 +1,18 @@
-\begin{itemize}
-	\item \textbf{Content -} Short (10 pages is probably far too much). High level introduction to the concepts/topics involved in the thesis, very short/broad definitions of any terms introduced in the title (eg `simultaneous presence'), overview of the rest of the document, list of contributions/donations of this document
-	\item \textbf{What has been done -} Nothing.
-	\item \textbf{What is left to do/how long should it take -} Should be one of the last things to be written, maybe a few days of writing.
-\end{itemize}
+\begin{quote}
+	\textit{``If the chaos of the nineties reflects a radical shift in the paradigms of visual literacy, the final shift away from the Lascaux/Gutenberg tradition of a pre-holographic society, what should we expect from this newer technology, with his promise of discrete encoding and subsequent reconstruction of the full range of sensory perception?''}
+\end{quote}
+\hfill \textit{Burning Chrome, William Gibson}
+\\
+\\
+\\
 
-\hrule
+%=========================================================================================================
+%=========================================================================================================
+
+%\begin{itemize}
+%	\item \textbf{Content -} Short (10 pages is probably far too much). High level introduction to the concepts/topics involved in the thesis, very short/broad definitions of any terms introduced in the title (eg `simultaneous presence'), overview of the rest of the document, list of contributions/donations of this document
+%	\item \textbf{What has been done -} Nothing.
+%	\item \textbf{What is left to do/how long should it take -} Should be one of the last things to be written, maybe a few days of writing.
+%\end{itemize}
+
+%\hrule
