--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -508,14 +508,6 @@ In the opening quote to this chapter, taken from Neal Stephenson's cyberpunk nov
 
 In this scenario there is no spatial equivalence between the real environment and the virtual environment - they are not the same `place', however the protagonist still wishes to be able to experience both by transitioning between them, paying attention to one while travelling through the other. While this situation is currently science fiction, recent developments in mobile VR platforms such as Samsumg Gear VR hint that we are not so far away from a time in which members of the general public will wish to multiplex their real environment with a virtual one while in public, in the same way that people commonly engage in computer-mediated communication (CMC) via their smartphones at the same time as walking through real environments \& conversing with the people in them, in instantiations of PoSR. Informing the implementation of transitions in such systems with the findings of the experiments in this thesis into spatially equivalent PR systems promises to be beneficial to them.
 
-A second example of such a situation is found in the book \textit{Ready Player One}, in a scene in which the protagonist users the equivalent of an Internet cafe to access the \textit{OASIS};
-
-\begin{quote}
-	\textit{``A vacant-eyed clerk glanced up at me \ldots\ He was wearing a bifocal visor, which gave him a semitransparent view of the OASIS while also allowing him to see his real-world surroundings.''}~\cite{Cline2012}
-\end{quote}
-
-The OASIS is similar to Snow Crash's Metaverse; a fictional multi-user 3D environment with no enforced likeness to the real world, accessed via \textit{``a visor \& a pair of haptic gloves''}. The bifocal visor allows this character to switch his attention between the virtual environment of the OASIS \& his real surroundings in the Internet cafe.
-
 %=========================================================================================================
 
 %\subsection{PolySocial Reality in Parallel Reality}
@@ -729,6 +721,8 @@ Thus, a PR platform is well suited to situations in which interaction with the v
 \end{itemize}
 
 \textbf{***mention the redecorating/remodelling example, the `real world as canvas for artistic expression' example, etc.}
+
+\textbf{***Case for non spatially equivalent PR - With the majority of players of popular Massively Multiplayer Online games (MMOs) wishing they could spend more time playing, over a fifth even wanting to spend all of their time in game~\cite{Castronova2006}, and with social roles and the community aspect constituting key aspects of these game's popularity~\cite{Castronova2006, Bartle2004}, exploring approaches for achieving 3D PoSR is prudent as demand for access to 3D social environments will only increase as 3D Web technologies further develop and more increasingly appeal to general social Web users and to educators in addition to gamers.}
 
 %=========================================================================================================
 
