--- a/thesis.tex
+++ b/thesis.tex
@@ -49,7 +49,7 @@
 	at the University of St Andrews}
 \end{center}
 
-\vspace{10mm}
+\vspace{6mm}
 
 \begin{center}
 	\Large{March 2015}
@@ -60,7 +60,7 @@
 \title{Parallel Reality: Tandem Exploration of Real \& Virtual Environments}
 \date{March 2015}
 \author{CJ Davies}
-\maketitle
+%\maketitle
 
 % ======= ======= ======= ======= ======= ======= =======
 
@@ -106,13 +106,13 @@
 
 % ======= ======= ======= ======= ======= ======= =======
 
-\chapter{Mirrorshades - Design/Implementation}
+\chapter{Mirrorshades - Development}
 \graphicspath{ {05_mirrorshades_design_implementation/} }
 \input{05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex}
 
 % ======= ======= ======= ======= ======= ======= =======
 
-\chapter{Mirrorshades - Studies/Results}
+\chapter{Mirrorshades - Evaluation}
 \graphicspath{ {06_mirrorshades_studies_results/} }
 \input{06_mirrorshades_studies_results/mirrorshades_studies_results.tex}
 
