--- a/02_example/example.tex
+++ b/02_example/example.tex
@@ -1,12 +1,23 @@
-\begin{itemize}
-	\item \textbf{Content -} Short (10 pages is probably far too long) example or usage scenario of how the concepts investigated in the thesis have/could be used (a `near-future usage scenario').
-	\item \textbf{What has been done -} Nothing.
-	\item \textbf{What is left to do/how long should it take -} Come up with a legitimate scenario, keep it short, should probably be written after the bulk of the later sections so there's a clear idea of what scenario I actually want to allude to. Perhaps a few days writing.
-\end{itemize}
+\begin{quote}
+	\textit{``There's no there, there. They taught that to children, explaining cyberspace.''}
+\end{quote}
+\hfill \textit{Mona Lisa Overdrive, William Gibson}
+\\
+\\
+\\
 
-\hrule
+%=========================================================================================================
+%=========================================================================================================
 
-\vspace{10mm}
+%\begin{itemize}
+%	\item \textbf{Content -} Short (10 pages is probably far too long) example or usage scenario of how the concepts investigated in the thesis have/could be used (a `near-future usage scenario').
+%	\item \textbf{What has been done -} Nothing.
+%	\item \textbf{What is left to do/how long should it take -} Come up with a legitimate scenario, keep it short, should probably be written after the bulk of the later sections so there's a clear idea of what scenario I actually want to allude to. Perhaps a few days writing.
+%\end{itemize}
+
+%\hrule
+
+%\vspace{10mm}
 
 \textbf{***Second Earth parallel reality example, think about what that person at DEMOfest was saying about being able to walk around Paris \& at any moment/location to transition into what it was like in the past.}
 
